--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Todo WebApp</title>
   </head>
   <body>
+    <!-- Header Section -->
     <header>
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
@@ -22,6 +23,8 @@
         </div>
       </nav>
     </header>
+
+    <!-- Sidebar OffCanvas section -->
     <div
       style="width: 250px"
       class="offcanvas offcanvas-start"
@@ -30,6 +33,7 @@
       id="offcanvasWithBothOptions"
       aria-labelledby="offcanvasWithBothOptionsLabel"
     >
+      <!-- inside sidebar home feature section -->
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Home</h5>
         <button
@@ -40,190 +44,249 @@
         ></button>
       </div>
       <div class="offcanvas-body features-body">
-        <div class="card bg-secondary mt-3">
-          <div class="p-2 card-body">All Tasks</div>
+        <div class="card bg-secondary-subtle mt-3">
+          <div class="card-body p-2">All Tasks</div>
         </div>
-        <div class="card bg-secondary mt-3">
-          <div class="card-body p-2">Today Tasks</div>
+        <div class="card bg-secondary-subtle mt-3">
+          <div class="card-body p-2">Today's Tasks</div>
         </div>
-        <div class="card bg-secondary mt-3">
-          <div class="card-body p-2">Weekly Tasks</div>
-        </div>
-        <div class="card bg-secondary mt-3">
+        <div class="card bg-secondary-subtle mt-3">
           <div class="card-body p-2">Completed Tasks</div>
         </div>
-        <div class="card bg-secondary mt-3">
-          <div class="card-body p-2">Completed Tasks</div>
-        </div>
-        <div class="card bg-secondary mt-3">
-          <div class="card-body p-2">Completed Tasks</div>
+        <div class="card bg-secondary-subtle mt-3">
+          <div class="card-body p-2">Important Tasks</div>
         </div>
       </div>
 
-      <div class="offcanvas-header">
+      <!-- inside sidebar project section -->
+      <div class="offcanvas-header d-flex justify-content-between">
         <h5 class="offcanvas-title">Projects</h5>
+        <a
+          class="btn btn-primary"
+          id="add-project-btn"
+          data-bs-toggle="collapse"
+          href="#collapseExample"
+          role="button"
+          aria-expanded="false"
+          aria-controls="collapseExample"
+        >
+          <i class="bi bi-folder-plus"></i>
+        </a>
       </div>
       <div class="offcanvas-body">
-        <div
-          class="card bg-secondary mt-3 d-flex flex-row align-items-center shadow-sm"
-        >
-          <div class="p-2 card-body project-container text-truncate">
-            All Tasks helo are u happy with him
-          </div>
-          <button
-            type="button"
-            class="btn-close"
-            disabled
-            aria-label="Close"
-          ></button>
+        <!-- this is a collaps form container for porject -->
+        <div class="collapse" id="collapseExample">
+          <form class="d-flex flex-column" id="project-form">
+            <div class="mb-2">
+              <input
+                type="text"
+                class="form-control"
+                id="project-form-input"
+                placeholder="Enter Project Name"
+              />
+            </div>
+            <div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
         </div>
-        <div
-          class="card bg-secondary mt-3 d-flex flex-row align-items-center shadow-sm"
-        >
-          <div class="p-2 card-body project-container text-truncate">
-            All Tasks helo are u happy with him
+
+        <!-- Projects showing area -->
+        <div id="projectListContainer">
+          <div
+            class="card bg-secondary-subtle mt-3 d-flex flex-row align-items-center shadow-sm"
+          >
+            <div class="p-2 card-body project-container text-truncate">
+              All Tasks helo are u happy with him
+            </div>
+            <button type="button" class="btn-close" aria-label="Close"></button>
           </div>
-          <button
-            type="button"
-            class="btn-close"
-            disabled
-            aria-label="Close"
-          ></button>
-        </div>
-        <div
-          class="card bg-secondary mt-3 d-flex flex-row align-items-center shadow-sm"
-        >
-          <div class="p-2 card-body project-container text-truncate">
-            All Tasks helo are u happy with him
+          <div
+            class="card bg-secondary-subtle mt-3 d-flex flex-row align-items-center shadow-sm"
+          >
+            <div class="p-2 card-body project-container text-truncate">
+              All Tasks helo are u happy with him
+            </div>
+            <button type="button" class="btn-close" aria-label="Close"></button>
           </div>
-          <button
-            type="button"
-            class="btn-close"
-            disabled
-            aria-label="Close"
-          ></button>
+          <div
+            class="card bg-secondary-subtle mt-3 d-flex flex-row align-items-center shadow-sm"
+          >
+            <div class="p-2 card-body project-container text-truncate">
+              All Tasks helo are u happy with him
+            </div>
+            <button type="button" class="btn-close" aria-label="Close"></button>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="d-flex flex-column gap-3 align-items-center mx-5">
+    <!-- Tasks container -->
+    <div class="d-flex flex-column gap-3 align-items-center mx-3">
       <h3 class="header">Task's</h3>
-      <div class="d-flex flex-wrap bg-info-subtle justify-content-center gap-2">
-        <div class="card task-card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-        <div class="card task-card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-        <div class="card task-card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-        <div class="card task-card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
-            <a href="#" class="btn btn-primary">Button</a>
-          </div>
-        </div>
-      </div>
-      <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        Add Task
-      </button>
 
+      <!-- inner task container -->
       <div
-        class="modal fade"
-        id="exampleModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
+        class="d-flex flex-wrap gap-4 justify-content-center"
+        id="task-UI-container"
       >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Add Task</h1>
+        <div class="card task-card">
+          <div class="card-body">
+            <div class="topCard-row d-flex justify-content-between">
+              <h5 class="card-title">Card title</h5>
               <button
                 type="button"
                 class="btn-close"
-                data-bs-dismiss="modal"
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body">
-              <form>
-                <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label"
-                    >Task Title:</label
-                  >
-                  <input type="text" class="form-control" id="recipient-name" />
-                </div>
-                <div class="mb-3">
-                  <label for="recipient-name" class="col-form-label"
-                    >Project:</label
-                  >
-                  <input type="text" class="form-control" id="recipient-name" />
-                </div>
-                <div class="mb-3">
-                  <label for="message-text" class="col-form-label"
-                    >Task Discription:</label
-                  >
-                  <textarea class="form-control" id="message-text"></textarea>
-                </div>
-                <div class="mb-3 form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1"
-                    >is Task Important!</label
-                  >
-                </div>
-              </form>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <div
+              class="lowerCard-row d-flex justify-content-end flex-wrap gap-3"
+            >
+              <span class="badge text-bg-info">May 2</span>
+              <span class="badge text-bg-success">Important</span>
+              <span class="badge text-bg-danger">UnCompleted</span>
             </div>
-            <div class="modal-footer">
+          </div>
+        </div>
+        <div class="card task-card">
+          <div class="card-body">
+            <div class="topCard-row d-flex justify-content-between">
+              <h5 class="card-title">Card title</h5>
               <button
                 type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Send message
-              </button>
+                class="btn-close"
+                aria-label="Close"
+              ></button>
+            </div>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <div
+              class="lowerCard-row d-flex justify-content-end flex-wrap gap-3"
+            >
+              <span class="badge text-bg-info">May 2</span>
+              <span class="badge text-bg-success">Important</span>
+              <span class="badge text-bg-danger">UnCompleted</span>
+            </div>
+          </div>
+        </div>
+        <div class="card task-card">
+          <div class="card-body">
+            <div class="topCard-row d-flex justify-content-between">
+              <h5 class="card-title">Card title</h5>
+              <button
+                type="button"
+                class="btn-close"
+                aria-label="Close"
+              ></button>
+            </div>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <div
+              class="lowerCard-row d-flex justify-content-end flex-wrap gap-3"
+            >
+              <span class="badge text-bg-info">May 2</span>
+              <span class="badge text-bg-success">Important</span>
+              <span class="badge text-bg-danger">UnCompleted</span>
+            </div>
+          </div>
+        </div>
+        <div class="card task-card">
+          <div class="card-body">
+            <div class="topCard-row d-flex justify-content-between">
+              <h5 class="card-title">Card title</h5>
+              <button
+                type="button"
+                class="btn-close"
+                aria-label="Close"
+              ></button>
+            </div>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <div
+              class="lowerCard-row d-flex justify-content-end flex-wrap gap-3"
+            >
+              <span class="badge text-bg-info">May 2</span>
+              <span class="badge text-bg-success">Important</span>
+              <span class="badge text-bg-danger">UnCompleted</span>
             </div>
           </div>
         </div>
       </div>
+
+      <!-- task form -->
+      <div class="collapse" id="collaps">
+        <form id="task-form">
+          <div class="mb-2">
+            <label for="select-project" class="col-form-label">Project:</label>
+            <select
+              class="form-select"
+              id="select-project"
+              aria-label="select a project where u want to add your task."
+            >
+              <option selected>Select Project...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="mb-2">
+            <label for="task-title" class="col-form-label">Task Title:</label>
+            <input type="text" class="form-control" id="task-title" />
+          </div>
+          <div class="mb-2">
+            <label for="task-due-date" class="col-form-label">Due Date:</label>
+            <input type="date" class="form-control" id="task-due-date" />
+          </div>
+          <div class="mb-2">
+            <label for="task-description" class="col-form-label"
+              >Task Description:</label
+            >
+            <textarea class="form-control" id="task-description"></textarea>
+          </div>
+          <div class="mb-2 form-check">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="task-importance"
+            />
+            <label class="form-check-label" for="task-importance"
+              >is Task Important!</label
+            >
+          </div>
+          <div class="text-end">
+            <button
+              type="close"
+              class="btn btn-secondary"
+              data-bs-toggle="close"
+            >
+              Close
+            </button>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+      <button
+        id="add-task-btn"
+        class="btn btn-primary"
+        data-bs-toggle="collapse"
+        href="#collaps"
+        role="button"
+        aria-expanded="false"
+        aria-controls="collaps"
+      >
+        Add Task
+      </button>
     </div>
   </body>
 </html>
