deploy on gh and remove card bg clr 💥

--- a/src/index.html
+++ b/src/index.html
@@ -46,16 +46,16 @@
         ></button>
       </div>
       <div class="offcanvas-body features-body">
-        <div class="card bg-secondary-subtle mt-3">
+        <div class="card mt-3">
           <div class="card-body p-2" id="allTasks">All Tasks</div>
         </div>
-        <div class="card bg-secondary-subtle mt-3">
+        <div class="card mt-3">
           <div class="card-body p-2" id="todaysTasks">Today's Tasks</div>
         </div>
-        <div class="card bg-secondary-subtle mt-3">
+        <div class="card mt-3">
           <div class="card-body p-2" id="completedTasks">Completed Tasks</div>
         </div>
-        <div class="card bg-secondary-subtle mt-3">
+        <div class="card mt-3">
           <div class="card-body p-2" id="importantTasks">Important Tasks</div>
         </div>
       </div>
